fix: mobile drawer content padding and visibility fix: adjust switcher font size for better readability on mobile

--- a/talos/src/component/sideBar/sideBar.mobile.module.scss
+++ b/talos/src/component/sideBar/sideBar.mobile.module.scss
@@ -232,7 +232,7 @@ html:not(:lang(zh-CN), :lang(zh-HK)) {
   .contentWrapper {
         display: flex;
         flex-direction: column;
-        padding: 0 1rem 1rem 1rem;
+        padding: 0 1rem;
         padding-top: 0;
         gap: 0.5rem;
         overflow-x: hidden;
